--- a/api/package.json
+++ b/api/package.json
@@ -1,4 +1,7 @@
-"scripts": {
+{
+  "name": "api",
+  "version": "1.0.0",
+  "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
